# Data-Analysis

./: .gitignore
Classification Analysis/.obsidian/: workspace.json
Classification Analysis/Custom KNN/: KNN Binary.ipynb
Classification Analysis/Decision Tree Classification/: Decision Tree.md  MushRoom Tree.ipynb  easy_calc.py  requirements.txt
Classification Analysis/Demo-Practice/: Demo Wine.ipynb  Heart Attack Analysis.ipynb  requirements
Classification Analysis/Evaluation Criteria/: Evaluation criteria.md
Classification Analysis/KNN/: .gitignore  Comparing Multi RNN and KNN.ipynb  KNN-Iris-binary.ipynb  Mushroom Cluestering Polars.ipynb  Mushroom Clustering KMeans.ipynb  Mushroom Clustering KModes.ipynb  Mushroom Clustering KNN.ipynb  Mushroom Clustering Polars.ipynb  Mushroom Clustering.ipynb  expand_mushroom.py  requirements.txt
Classification Analysis/Logistic Regression/: Logistic Regression Breast Cancer.ipynb  Logistic Regression iris binary.ipynb  Logistic Regression iris.ipynb  Logistic Regression.md  Mushroom Classification Logistic Regression.ipynb  requirements
Classification Analysis/Naive Bayes/: Explanation.ipynb  Mushroom Naive Bayes classification.ipynb  Naive Bayes.md  NaiveBayes Iris binary.ipynb  NaiveBayes Iris.ipynb  example_data.csv  requirements
Classification Analysis/Support Vector Machine/: Case Breast Cancer.ipynb  Mushroom practice.ipynb  Support Vector Machine.md  requirements.txt
Classification Analysis/regression-analysis/: pyproject.toml
Classification-Analysis-Rust/: .gitignore  Cargo.toml  Mushroom Clustering.ipynb  output.txt  requirements.txt
Classification-Analysis-Rust/.ipynb_checkpoints/: Mushroom Clustering-checkpoint.ipynb
Classification-Analysis-Rust/KNN/: Cargo.toml
Classification-Analysis-Rust/KNN/src/: main.rs
Classification-Analysis-Rust/data-loader/: Cargo.toml
Classification-Analysis-Rust/data-loader/src/: lib.rs
Classification-Analysis-Rust/data-scrapper/: Cargo.toml
Classification-Analysis-Rust/data-scrapper/src/: lib.rs  main.rs
Classification-Analysis-Rust/data_frame_plotter/: Cargo.toml
Classification-Analysis-Rust/data_frame_plotter/src/: color_caster.rs  lib.rs
Classification-Analysis-Rust/excel-generator/: Cargo.toml
Classification-Analysis-Rust/excel-generator/src/: main.rs
Classification-Analysis-Rust/google-data-fetcher/: Cargo.toml
Classification-Analysis-Rust/google-data-fetcher/src/: lib.rs
Classification-Analysis-Rust/k_means/: Cargo.toml
Classification-Analysis-Rust/k_means/src/: main.rs
Classification-Analysis-Rust/mushroom-clustering/: Cargo.toml
Classification-Analysis-Rust/mushroom-clustering/src/: lib.rs  loading_data.rs  main.rs  preprocessing_data.rs
Classification-Analysis-Rust/parallel-scrapper/: Cargo.toml
Classification-Analysis-Rust/parallel-scrapper/src/: main.rs
Classification-Analysis-Rust/sort-by-column/: Cargo.toml
Classification-Analysis-Rust/sort-by-column/src/: main.rs
Classification-Analysis-Rust/src/: main.rs
Classification-Analysis-Rust/tch-tensor-example/: Cargo.toml  Update Readme.md
Classification-Analysis-Rust/tch-tensor-example/src/: main.rs  model.rs
Data Analysis with Python/Classification Analysis/: Comparing Multi RNN and KNN.ipynb  KNN Iris multiclass.ipynb  KNN-Iris-binary.ipynb  RNN vs KNN classification.ipynb  requirements.txt
Data Analysis with Python/Classification Analysis/Custom KNN/: Circle Points.ipynb
Data Analysis with Python/Classification Analysis/Decision Tree Classification/: Case-DecisionTree-BreastCancer.ipynb  Case-DecisionTree-Iris-Binary.ipynb  Case-DecisionTree-Iris-multiclass.ipynb
Data Analysis with Python/Classification Analysis/KNN/: Case Study Breast Cancer.ipynb
Databases/: Journey.md
Databases/PostgreSQL/: Commands.md  Concurrency and Transactions.md  Data Types.md  Database Keys and Indexes in PostgreSQL.md  Index strategies.md  Keys.md  PostgreSQL.md  Rust diesel PostSQL.md
Databases/PostgreSQL/Commands/: Distinct - Group By.md  Stored Procedures.md  Subqueries.md
Databases/PostgreSQL/Data Types/: Dates.md  Text.md
Databases/PostgreSQL/Database Design/: Alter Table.md  Creating Tables and Inserting Data.md  (+4 more)
Databases/PostgreSQL/orms/diesel_demo/: .env  .gitignore  Cargo.toml  diesel.toml
Databases/PostgreSQL/orms/diesel_demo/bitwise-operations/: Cargo.toml
Databases/PostgreSQL/orms/diesel_demo/bitwise-operations/src/: main.rs
Databases/PostgreSQL/orms/diesel_demo/loading-csv-raw/: Cargo.toml
Databases/PostgreSQL/orms/diesel_demo/loading-csv-raw/src/: commands_implementations.rs  main.rs  postgres_config.rs
Databases/PostgreSQL/orms/diesel_demo/show-data/: Cargo.toml
Databases/PostgreSQL/orms/diesel_demo/show-data/src/: commands.rs  main.rs
Databases/PostgreSQL/orms/diesel_demo/src/: main.rs
Decision Tree Classification/: Decision Tree.md  entropy.py
Playing/: data_loader.py  requirements.txt
Playing/Avocado Analysis/: Avocado Sarima.ipynb
Playing/Human Development World Index/: Gini Tree.ipynb  data_loader.py
Playing/Public Transportation/: .gitignore  Data Explorer.ipynb  compose.yaml  load_data.py  load_to_neo4j.py
Playing/Rick and Morty/: Rick and Morty NLP.ipynb  data_loader.py
regression-analysis/: .gitignore  Case-Diabetes.ipynb  Cross Validation.md  Ensemble methods.md  Linear Simple Regression.ipynb  Polynomial Regression.md  Regression.md  Regularized Linear Models.md  pyproject.toml  uv jupyter instructions.md
regression-analysis/cross-validation/: Case-CA-housing.ipynb  Demo-CrossValidation.ipynb
regression-analysis/data-loader/: pyproject.toml
regression-analysis/ensemble-methods/: Case-CA-housing.ipynb  RandomForests-Iris-binary.ipynb
regression-analysis/linear-regression/: KC House Data Analysis.ipynb  Linear Simple Regression.ipynb
regression-analysis/polynomial-regression/: Demo MultipleRegression.ipynb  Demo PolynomialSimpleRegression.ipynb  Multiple Linear Regression.ipynb  Polynomial Regression.ipynb
regression-analysis/regularized-linear-models/: Case-CA-housing.ipynb  Demo-Regularization.ipynb
(+50 files in other folders)
