[workspace]
members = ["KNN", "data_frame_plotter", "google-data-fetcher", "data-scrapper", "tch-tensor-example"]

[package]
name = "Classification-Analysis-Rust"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
polars = { version = "0.41.3", features = ["lazy"] }
polars-io = "0.41.3"
plotly = { git = "https://github.com/yasuomaidana/plotly.rs", branch = "multiples-axis", features = ["kaleido"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = "0.20.0"
rand = "0.8.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
termion = "4.0.2"
tch = "0.17.0"

tch = "0.18.0"
# when updating tch
# Run the following commands after the warning popup occurs so as to delete the macOS quarantine flag from all the files inside of /path/to/libtorch/lib folder
# xattr -r -d com.apple.quarantine /path/to/libtorch/lib