[workspace]
members = ["k_means", "data_frame_plotter", "google-data-fetcher", "data-scrapper", "tch-tensor-example", "parallel-scrapper", "sort-by-column", "data-loader", "excel-generator", "mushroom-clustering"]

[package]
name = "Classification-Analysis-Rust"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
polars = { version = "0.43.1", features = ["lazy"] }
polars-core = "0.43.1"
polars-io = "0.43.1"
plotly = { git = "https://github.com/yasuomaidana/plotly.rs", branch = "multiples-axis", features = ["kaleido"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = "0.20.0"
rand = "0.8.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
termion = "4.0.2"
tch = "0.18.0"
# when updating tch
# Run the following commands after the warning popup occurs so as to delete the macOS quarantine flag from all the files inside of /path/to/libtorch/lib folder
# xattr -r -d com.apple.quarantine /path/to/libtorch/lib
regex = "1.11.0"
tokio = { version = "1.40.0", features = ["full"] }
data-loader = { path = "data-loader" }
tokio-compat-02 = "0.2.0"
linfa = "0.7.0"
linfa-clustering = "0.7.0"
linfa-nn = "0.7.0"
ndarray = "0.16.1"