[project]
name = "data-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yasuomaidana", email = "yasuomaidana@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "kaggle>=1.7.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
